<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/buttonClear"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="105dp"
        android:layout_height="90dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="102dp"
        android:layout_height="90dp"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="105dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        tools:layout_editor_absoluteX="206dp" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="102dp"
        android:layout_height="90dp"
        android:text="@string/buttonMinus"
        app:layout_constraintBottom_toTopOf="@+id/buttonMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="105dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@+id/buttonNeg"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/buttonDec"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="102dp"
        android:layout_height="90dp"
        android:text="@string/buttonMulti"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/buttonNeg"
        android:layout_width="105dp"
        android:layout_height="90dp"
        android:text="@string/buttonNeg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:text="@string/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNeg" />

    <Button
        android:id="@+id/buttonDec"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/buttonDec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/buttonDivi"
        android:layout_width="102dp"
        android:layout_height="90dp"
        android:text="@string/buttonDivi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDec" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="409dp"
        android:layout_height="154dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="217dp"
        android:layout_height="70dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonClear" />

</androidx.constraintlayout.widget.ConstraintLayout>